@@ -61,6 +61,7 @@ public:
     static KAction *actSelectNewerAndSingle, *actSelectNewer, *actSelectSingle,
     *actSelectDifferentAndSingle, *actSelectDifferent;
     static KAction *actZoomIn, *actZoomOut, *actDefaultZoom;
+    static KAction *actFocusPanel;
     /** actions for setting the execution mode of commands from commanddline */
     static KAction *actExecStartAndForget,
     *actExecCollectSeparate, *actExecCollectTogether,
