@@ -1233,4 +1233,15 @@ void KRslots::viewApplySettingsToOthers()
     ACTIVE_VIEW->applySettingsToOthers();
 }
 
+void KRslots::focusPanel()
+{
+    if(ACTIVE_VIEW->widget()->hasFocus()) {
+        if(KrActions::actFocusPanel->shortcut() == KShortcut(QKeySequence(Qt::Key_Escape)) &&
+           KrActions::actCancelRefresh->shortcut().isEmpty())
+            KrActions::actCancelRefresh->trigger();
+    }
+    else
+        ACTIVE_VIEW->widget()->setFocus();
+}
+
 #include "krslots.moc"
